--- a/readme.html
+++ b/readme.html
@@ -13,6 +13,6 @@
 </head>
 <body>
 <p class="p1"><span class="s1">Git is a distributed version control system.</span></p>
-<p class="p1"><span class="s1">Git is free software.</span></p>
+<p class="p1"><span class="s1">Git is free software distributed under the GPL.</span></p>
 </body>
 </html>
