--- a/readme.html
+++ b/readme.html
@@ -14,5 +14,7 @@
 <body>
 <p class="p1"><span class="s1">Git is a distributed version control system.</span></p>
 <p class="p1"><span class="s1">Git is free software distributed under the GPL.</span></p>
+<p class="p1"><span class="s1">Git has a mutable index called stage.</span></p>
+<p class="p1"><span class="s1">Git tracks changes.<span class="Apple-converted-space"> </span></span></p>
 </body>
 </html>
