--- a/readme.html
+++ b/readme.html
@@ -15,6 +15,6 @@
 <p class="p1"><span class="s1">Git is a distributed version control system.</span></p>
 <p class="p1"><span class="s1">Git is free software distributed under the GPL.</span></p>
 <p class="p1"><span class="s1">Git has a mutable index called stage.</span></p>
-<p class="p1"><span class="s1">Git tracks changes.<span class="Apple-converted-space"> </span></span></p>
+<p class="p1"><span class="s1">Git tracks changes of files.</span></p>
 </body>
 </html>
